# bevy_sidescroller

./: .gitignore  Cargo.toml  LEVEL_CREATION_GUIDE.md  README.md  TILES_SYSTEM.md  TILE_CONSTANTS.md  TILE_MAPPING.md
assets/levels/: level.ldtk  level1.txt  sample_level.txt
examples/: template_level_example.rs
src/: components.rs  constants.rs  main.rs
src/systems/: animation.rs  debug.rs  level_editor.rs  level_loader.rs  level_parser.rs  level_templates.rs  mod.rs  movement.rs  setup.rs  tiled_loader.rs  tiles.rs
