[package]
name = "bevy_sidescroller"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_egui = "0.35.0"
bevy_rapier2d = { version = "0.30.0", features = ["simd-stable", "parallel"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
